[package]
name = "lit"
version = "0.3.4"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Integrated testing tool, inspired by LLVM's 'lit' testing script"
documentation = "https://docs.rs/lit"
repository = "https://github.com/dylanmckay/lit"

license = "MIT"

keywords = ["testing"]

[dependencies]
error-chain = "0.12"
lazy_static = "1.3"
regex = "1.1"
tempfile = "3.0"
term = "0.5"
walkdir = "2.2"
