[package]
name = "lit"
version = "0.3.4"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Integrated testing tool, inspired by LLVM's 'lit' testing script"
documentation = "https://docs.rs/lit"
repository = "https://github.com/dylanmckay/lit"

license = "MIT"

keywords = ["testing"]

[dependencies]
error-chain = "0.12"
lazy_static = "1.4"
regex = "1.3"
tempfile = "3.1"
term = "0.6"
walkdir = "2.3"
