[package]
name = "lit"
version = "1.0.1"
authors = ["Dylan McKay <me@dylanmckay.io>"]
edition = "2018"

description = "Integrated testing tool, inspired by LLVM's 'lit' testing script"
documentation = "https://docs.rs/lit"
repository = "https://github.com/dylanmckay/lit"

license = "MIT"

keywords = ["testing"]

[features]
default = ["clap"]

[dependencies]
clap = { version = "2.33", optional = true }
error-chain = "0.12"
itertools = "0.9"
lazy_static = "1.4"
log = "0.4"
regex = "1.3"
tempfile = "3.1"
term = "0.6"
walkdir = "2.3"

[dev-dependencies]
pretty_env_logger = "0.4"
